Word wrap bug fix

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -63,6 +63,7 @@ body {
     margin: 13px 0;
     color: #313131;
     padding-left: 10px;
+    word-break: break-word;
 
     /*border: 1px solid green;*/
 }
